refactored scrapers for sites using Literatum to extend the LiteratumScraper, fixes issue #2815

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ACSScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ACSScraperUnitURLTest.bib
@@ -7,8 +7,16 @@ number = {6},
 pages = {1891-1896},
 year = {2004},
 doi = {10.1021/ci049894n},
-note ={PMID: 15554657},
-URL = {https://doi.org/10.1021/ci049894n},
-eprint = {https://doi.org/10.1021/ci049894n},
-abstract = { This article first revises graph-theoretical (local aromaticity and overall molecular) indices, introduced by M. Randić in 1975, for benzenoid hydrocarbons and somewhat improves them for computer enumeration. This goes beyond total Kekulé structure enumeration, yielding an index calculation useful for the quantitative estimation of localization of different Kekuléan substructures (including ethylene-, benzene-, annulene-, and radialene-units). This may be viewed as a “molecules-in molecule” approach to polycyclic aromatic hydrocarbons within the context of graph theoretical partitioning. }
+    note ={PMID: 15554657},
+
+URL = { 
+        https://doi.org/10.1021/ci049894n
+    
+},
+eprint = { 
+        https://doi.org/10.1021/ci049894n
+    
+}
+,
+    abstract = { This article first revises graph-theoretical (local aromaticity and overall molecular) indices, introduced by M. Randić in 1975, for benzenoid hydrocarbons and somewhat improves them for computer enumeration. This goes beyond total Kekulé structure enumeration, yielding an index calculation useful for the quantitative estimation of localization of different Kekuléan substructures (including ethylene-, benzene-, annulene-, and radialene-units). This may be viewed as a “molecules-in molecule” approach to polycyclic aromatic hydrocarbons within the context of graph theoretical partitioning. }
 }
