--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/LiebertScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/LiebertScraperUnitURLTest2.bib
@@ -22,8 +22,8 @@ eprint = {
         https://doi.org/10.1089/teb.2007.0150
     
 }
-
-,abstract = {<b>Traditional methods of cell growth and manipulation on 2-dimensional (2D) surfaces have been shown to be insufficient for new challenges of cell biology and biochemistry, as well as in pharmaceutical assays. Advances in materials chemistry, materials fabrication and processing technologies, and developmental biology have led to the design of 3D cell culture matrices that better represent the geometry, chemistry, and signaling environment of natural extracellular matrix. In this review, we present the status of state-of-the-art 3D cell-growth techniques and scaffolds and analyze them from the perspective of materials properties, manufacturing, and functionality. Particular emphasis was placed on tissue engineering and <i>in vitro</i> modeling of human organs, where we see exceptionally strong potential for 3D scaffolds and cell-growth methods. We also outline key challenges in this field and most likely directions for future development of 3D cell culture over the period of 5–10 years.</b>}
+,
+    abstract = { Traditional methods of cell growth and manipulation on 2-dimensional (2D) surfaces have been shown to be insufficient for new challenges of cell biology and biochemistry, as well as in pharmaceutical assays. Advances in materials chemistry, materials fabrication and processing technologies, and developmental biology have led to the design of 3D cell culture matrices that better represent the geometry, chemistry, and signaling environment of natural extracellular matrix. In this review, we present the status of state-of-the-art 3D cell-growth techniques and scaffolds and analyze them from the perspective of materials properties, manufacturing, and functionality. Particular emphasis was placed on tissue engineering and in vitro modeling of human organs, where we see exceptionally strong potential for 3D scaffolds and cell-growth methods. We also outline key challenges in this field and most likely directions for future development of 3D cell culture over the period of 5–10 years. }
 }
 
 
