--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/LiebertScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/LiebertScraperUnitURLTest3.bib
@@ -22,7 +22,8 @@ eprint = {
         https://doi.org/10.1089/152308604773934350
     
 }
-
+,
+    abstract = { A new technique is described for simultaneous determination of intra- and extracellular oxygen concentrations [partial pressure of O2 (pO2)] in bovine lung microvascular endothelial cells (BLMVECs) using electron paramagnetic resonance (EPR) oximetry. The measurements were performed in BLMVEC suspensions of a 20-µl volume containing 4,000 cells. The extracellular pO2 was measured using a trityl EPR probe [triarylmethyl (TAM), 10 µM], a tricarboxylate anion radical, that stays exclusively in the extracellular space. The intracellular oxygen was measured using a pre-internalized particulate spin probe, lithium 5,9,14,18,23,27,32,36-octa-n-butoxy-naphthalocyanine (LiNc-BuO). Because there is a wide discrepancy in the reported values of cellular oxygenation by and large due to differences in the methods employed, we utilized the dual EPR probe technique to measure the oxygen gradient that apparently exists across the cell membrane. The intra- and extracellular pO2 values were 139 ± 2.5 and 157 ± 3.6 mm Hg, respectively, for cells exposed to room air. A fairly smaller gradient of oxygen was observed in cells exposed to 7.5\% oxygen (pO2 = 57 mm Hg). In summary, this study confirms the feasibility of simultaneous and accurate measurements of intra- and extracellular pO2 using LiNc-BuO and TAM EPR oximetry probes. }
 }
 
 
