--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/MorganClaypoolScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/MorganClaypoolScraperUnitURLTest1.bib
@@ -1,8 +1,3 @@
-
-
-
-
-
 @article{doi:10.2200/S00334ED1V01Y201102WBE001,
 author = { Tom Heath and  Christian Bizer},
 title = {Linked Data: Evolving the Web into a Global Data Space},
@@ -13,12 +8,14 @@ pages = {1-136},
 year = {2011},
 doi = {10.2200/S00334ED1V01Y201102WBE001},
 
-URL = {http://dx.doi.org/10.2200/S00334ED1V01Y201102WBE001},
+URL = { 
+        https://doi.org/10.2200/S00334ED1V01Y201102WBE001
+    
+},
 eprint = { 
-        http://dx.doi.org/10.2200/S00334ED1V01Y201102WBE001
+        https://doi.org/10.2200/S00334ED1V01Y201102WBE001
     
 }
-
+,
+    abstract = { Abstract The World Wide Web has enabled the creation of a global information space comprising linked documents. As the Web becomes ever more enmeshed with our daily lives, there is a growing desire for direct access to raw data not currently available on the Web or bound up in hypertext documents. Linked Data provides a publishing paradigm in which not only documents, but also data, can be a first class citizen of the Web, thereby enabling the extension of the Web with a global data space based on open standards - the Web of Data. In this Synthesis lecture we provide readers with a detailed technical introduction to Linked Data. We begin by outlining the basic principles of Linked Data, including coverage of relevant aspects of Web architecture. The remainder of the text is based around two main themes - the publication and consumption of Linked Data. Drawing on a practical Linked Data scenario, we provide guidance and best practices on: architectural approaches to publishing Linked Data; choosing URIs and vocabularies to identify and describe resources; deciding what data to return in a description of a resource on the Web; methods and frameworks for automated linking of data sets; and testing and debugging approaches for Linked Data deployments. We give an overview of existing Linked Data applications and then examine the architectures that are used to consume Linked Data from the Web, alongside existing tools and frameworks that enable these. Readers can expect to gain a rich technical understanding of Linked Data fundamentals, as the basis for application development, research or further study. Table of Contents: List of Figures / Introduction / Principles of Linked Data / The Web of Data / Linked Data Design Considerations / Recipes for Publishing Linked Data / Consuming Linked Data / Summary and Outlook }
 }
-
-
