--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NEJMScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NEJMScraperUnitURLTest1.bib
@@ -9,10 +9,14 @@ year = {2012},
 doi = {10.1056/NEJMra1100109},
     note ={PMID: 22256807},
 
-URL = {http://dx.doi.org/10.1056/NEJMra1100109},
+URL = { 
+        http://dx.doi.org/10.1056/NEJMra1100109
+    
+},
 eprint = { 
         http://dx.doi.org/10.1056/NEJMra1100109
     
 }
-
+,
+    abstract = { Patients referred for coronary revascularization procedures are older and are likely to have more extensive extracardiac vascular disease than those referred for such procedures in the past. Despite these trends, mortality rates for coronary-artery bypass grafting (CABG), without concurrent procedures, have continued to decline.1 Nevertheless, adverse neurologic outcomes, including stroke and cognitive decline, remain a major concern for these older patients. The development of strategies to reduce the incidence of postoperative neurologic events has been hampered by the lack of a clear understanding of the pathophysiology of such outcomes. Owing partly to the assumption that adverse neurologic events were specifically . . . }
 }
