--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/taylorAndFrancis/TaylorAndFrancisScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/taylorAndFrancis/TaylorAndFrancisScraperUnitURLTest1.bib
@@ -5,12 +5,16 @@ journal = {Connection Science},
 volume = {26},
 number = {3},
 pages = {215-243},
-year = {2014},
+year  = {2014},
+publisher = {Taylor & Francis},
 doi = {10.1080/09540091.2014.906388},
 
-URL = {http://dx.doi.org/10.1080/09540091.2014.906388},
+URL = { 
+        https://doi.org/10.1080/09540091.2014.906388
+    
+},
 eprint = { 
-        http://dx.doi.org/10.1080/09540091.2014.906388
+        https://doi.org/10.1080/09540091.2014.906388
     
 }
 ,
