--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/taylorAndFrancis/TaylorAndFrancisScraperUnitURLTest4.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/taylorAndFrancis/TaylorAndFrancisScraperUnitURLTest4.bib
@@ -5,12 +5,16 @@ journal = {Journal of the American Statistical Association},
 volume = {72},
 number = {357},
 pages = {138-142},
-year = {1977},
+year  = {1977},
+publisher = {Taylor & Francis},
 doi = {10.1080/01621459.1977.10479922},
 
-URL = {http://amstat.tandfonline.com/doi/abs/10.1080/01621459.1977.10479922},
+URL = { 
+        https://amstat.tandfonline.com/doi/abs/10.1080/01621459.1977.10479922
+    
+},
 eprint = { 
-        http://amstat.tandfonline.com/doi/pdf/10.1080/01621459.1977.10479922
+        https://amstat.tandfonline.com/doi/pdf/10.1080/01621459.1977.10479922
     
 }
 ,
