--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ATSScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ATSScraperUnitURLTest1.bib
@@ -1,17 +1,22 @@
-@article{stevens2011functional,
-author = {Stevens, Troy},
-booktitle = {Proceedings of the American Thoracic Society},
-comment = {doi: 10.1513/pats.201101-004MW},
-doi = {10.1513/pats.201101-004MW},
-issn = {15463222},
-journal = {Proc Am Thorac Soc},
-month = {nov},
-number = {6},
-pages = {453--457},
-publisher = {American Thoracic Society - PATS},
+@article{doi:10.1513/pats.201101-004MW,
+author = {Troy Stevens},
 title = {Functional and Molecular Heterogeneity of Pulmonary Endothelial Cells},
-url = {https://www.atsjournals.org/doi/abs/10.1513/pats.201101-004MW},
+journal = {Proceedings of the American Thoracic Society},
 volume = {8},
-year = {2011}
-,abstract = {In recent years there has been an increasing appreciation of the functional heterogeneity that exists between extraalveolar and alveolar endothelial cells. One of the most striking features of pulmonary microvascular endothelial cells is that they possess a highly impermeable barrier with respect to pulmonary artery or vein endothelial cells. This cellular feature is observed in culture and in the intact microcirculation, prompting a reevaluation of the key physiological principles that control permeability and the fate of fluid (or exudate) once it leaves the circulation. Pulmonary microvascular endothelial cells express calcium channels not found in extraalveolar endothelial cells, including the vanilloid family transient receptor potential 4 channel and the α1G T-type calcium channel. Whereas activation of the TRPV4 channel causes alveolar flooding, activation of the α1G T-type calcium channel promotes P-selectin surface translocation, events specific to the microcirculation. Although endothelium is an attractive therapeutic target in acute lung injury and other vascular disorders, the growing awareness of pulmonary endothelial cell heterogeneity increasingly suggests that a panendothelial cell approach is suboptimal. Rather, development of novel therapeutics based upon anatomically restricted expression of molecular signatures may be developed to better combat vascular disease.}
+number = {6},
+pages = {453-457},
+year = {2011},
+doi = {10.1513/pats.201101-004MW},
+    note ={PMID: 22052919},
+
+URL = { 
+        https://www.atsjournals.org/doi/abs/10.1513/pats.201101-004MW
+    
+},
+eprint = { 
+        https://www.atsjournals.org/doi/pdf/10.1513/pats.201101-004MW
+    
+}
+,
+    abstract = { In recent years there has been an increasing appreciation of the functional heterogeneity that exists between extraalveolar and alveolar endothelial cells. One of the most striking features of pulmonary microvascular endothelial cells is that they possess a highly impermeable barrier with respect to pulmonary artery or vein endothelial cells. This cellular feature is observed in culture and in the intact microcirculation, prompting a reevaluation of the key physiological principles that control permeability and the fate of fluid (or exudate) once it leaves the circulation. Pulmonary microvascular endothelial cells express calcium channels not found in extraalveolar endothelial cells, including the vanilloid family transient receptor potential 4 channel and the α1G T-type calcium channel. Whereas activation of the TRPV4 channel causes alveolar flooding, activation of the α1G T-type calcium channel promotes P-selectin surface translocation, events specific to the microcirculation. Although endothelium is an attractive therapeutic target in acute lung injury and other vascular disorders, the growing awareness of pulmonary endothelial cell heterogeneity increasingly suggests that a panendothelial cell approach is suboptimal. Rather, development of novel therapeutics based upon anatomically restricted expression of molecular signatures may be developed to better combat vascular disease. }
 }
