--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ATSScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ATSScraperUnitURLTest3.bib
@@ -1,17 +1,22 @@
-@article{hristova2012tobacco,
-author = {Hristova, Milena and Spiess, Page C. and Kasahara, David I. and Randall, Matthew J. and Deng, Bin and van der Vliet, Albert},
-booktitle = {American Journal of Respiratory Cell and Molecular Biology},
-comment = {doi: 10.1165/rcmb.2011-0134OC},
-doi = {10.1165/rcmb.2011-0134OC},
-issn = {10441549},
-journal = {Am J Respir Cell Mol Biol},
-month = {jan},
-number = {1},
-pages = {23--33},
-publisher = {American Thoracic Society - AJRCMB},
+@article{doi:10.1165/rcmb.2011-0134OC,
+author = {Milena Hristova and Page C. Spiess and David I. Kasahara and Matthew J. Randall and Bin Deng and Albert van der Vliet},
 title = {The Tobacco Smoke Component, Acrolein, Suppresses Innate Macrophage Responses by Direct Alkylation of c-Jun N-Terminal Kinase},
-url = {https://doi.org/10.1165/rcmb.2011-0134OC},
+journal = {American Journal of Respiratory Cell and Molecular Biology},
 volume = {46},
-year = {2012}
-,abstract = {The respiratory innate immune system is often compromised by tobacco smoke exposure, and previous studies have indicated that acrolein, a reactive electrophile in tobacco smoke, may contribute to the immunosuppressive effects of smoking. Exposure of mice to acrolein at concentrations similar to those in cigarette smoke (5 ppm, 4 h) significantly suppressed alveolar macrophage responses to bacterial LPS, indicated by reduced induction of nitric oxide synthase 2, TNF-α, and IL-12p40. Mechanistic studies with bone marrow–derived macrophages or MH-S macrophages demonstrated that acrolein (1–30 μM) attenuated these LPS-mediated innate responses in association with depletion of cellular glutathione, although glutathione depletion itself was not fully responsible for these immunosuppressive effects. Inhibitory actions of acrolein were most prominent after acute exposure (<2 h), indicating the involvement of direct and reversible interactions of acrolein with critical signaling pathways. Among the key signaling pathways involved in innate macrophage responses, acrolein marginally affected LPS-mediated activation of nuclear factor (NF)-κB, and significantly suppressed phosphorylation of c-Jun N-terminal kinase (JNK) and activation of c-Jun. Using biotin hydrazide labeling, NF-κB RelA and p50, as well as JNK2, a critical mediator of innate macrophage responses, were revealed as direct targets for alkylation by acrolein. Mass spectrometry analysis of acrolein-modified recombinant JNK2 indicated adduction to Cys41 and Cys177, putative important sites involved in mitogen-activated protein kinase (MAPK) kinase (MEK) binding and JNK2 phosphorylation. Our findings indicate that direct alkylation of JNK2 by electrophiles, such as acrolein, may be a prominent and hitherto unrecognized mechanism in their immunosuppressive effects, and may be a major factor in smoking-induced effects on the immune system.}
+number = {1},
+pages = {23-33},
+year = {2012},
+doi = {10.1165/rcmb.2011-0134OC},
+    note ={PMID: 21778411},
+
+URL = { 
+        https://doi.org/10.1165/rcmb.2011-0134OC
+    
+},
+eprint = { 
+        https://doi.org/10.1165/rcmb.2011-0134OC
+    
+}
+,
+    abstract = { The respiratory innate immune system is often compromised by tobacco smoke exposure, and previous studies have indicated that acrolein, a reactive electrophile in tobacco smoke, may contribute to the immunosuppressive effects of smoking. Exposure of mice to acrolein at concentrations similar to those in cigarette smoke (5 ppm, 4 h) significantly suppressed alveolar macrophage responses to bacterial LPS, indicated by reduced induction of nitric oxide synthase 2, TNF-α, and IL-12p40. Mechanistic studies with bone marrow–derived macrophages or MH-S macrophages demonstrated that acrolein (1–30 μM) attenuated these LPS-mediated innate responses in association with depletion of cellular glutathione, although glutathione depletion itself was not fully responsible for these immunosuppressive effects. Inhibitory actions of acrolein were most prominent after acute exposure (<2 h), indicating the involvement of direct and reversible interactions of acrolein with critical signaling pathways. Among the key signaling pathways involved in innate macrophage responses, acrolein marginally affected LPS-mediated activation of nuclear factor (NF)-κB, and significantly suppressed phosphorylation of c-Jun N-terminal kinase (JNK) and activation of c-Jun. Using biotin hydrazide labeling, NF-κB RelA and p50, as well as JNK2, a critical mediator of innate macrophage responses, were revealed as direct targets for alkylation by acrolein. Mass spectrometry analysis of acrolein-modified recombinant JNK2 indicated adduction to Cys41 and Cys177, putative important sites involved in mitogen-activated protein kinase (MAPK) kinase (MEK) binding and JNK2 phosphorylation. Our findings indicate that direct alkylation of JNK2 by electrophiles, such as acrolein, may be a prominent and hitherto unrecognized mechanism in their immunosuppressive effects, and may be a major factor in smoking-induced effects on the immune system. }
 }
