--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AipScitationScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AipScitationScraperUnitURLTest2.bib
@@ -1,17 +1,21 @@
-@article{gruebele2013perspective,
-author = {Gruebele, Martin and Thirumalai, D.},
-booktitle = {The Journal of Chemical Physics},
-comment = {doi: 10.1063/1.4820139},
-doi = {10.1063/1.4820139},
-issn = {00219606},
-journal = {The Journal of Chemical Physics},
-month = {sep},
-number = {12},
-pages = {121701--},
-publisher = {American Institute of Physics},
+@article{doi:10.1063/1.4820139,
+author = {Martin Gruebele and D. Thirumalai},
 title = {Perspective: Reaches of chemical physics in biology},
-url = {http://dx.doi.org/10.1063/1.4820139},
+journal = {The Journal of Chemical Physics},
 volume = {139},
-year = {2013}
-,abstract = {Chemical physics as a discipline contributes many experimental tools, algorithms, and fundamental theoretical models that can be applied to biological problems. This is especially true now as the molecular level and the systems level descriptions begin to connect, and multi-scale approaches are being developed to solve cutting edge problems in biology. In some cases, the concepts and tools got their start in non-biological fields, and migrated over, such as the idea of glassy landscapes, fluorescence spectroscopy, or master equation approaches. In other cases, the tools were specifically developed with biological physics applications in mind, such as modeling of single molecule trajectories or super-resolution laser techniques. In this introduction to the special topic section on chemical physics of biological systems, we consider a wide range of contributions, all the way from the molecular level, to molecular assemblies, chemical physics of the cell, and finally systems-level approaches, based on the co...}
+number = {12},
+pages = {121701},
+year = {2013},
+doi = {10.1063/1.4820139},
+
+URL = { 
+        https://doi.org/10.1063/1.4820139
+    
+},
+eprint = { 
+        https://doi.org/10.1063/1.4820139
+    
+}
+,
+    abstract = { Chemical physics as a discipline contributes many experimental tools, algorithms, and fundamental theoretical models that can be applied to biological problems. This is especially true now as the molecular level and the systems level descriptions begin to connect, and multi-scale approaches are being developed to solve cutting edge problems in biology. In some cases, the concepts and tools got their start in non-biological fields, and migrated over, such as the idea of glassy landscapes, fluorescence spectroscopy, or master equation approaches. In other cases, the tools were specifically developed with biological physics applications in mind, such as modeling of single molecule trajectories or super-resolution laser techniques. In this introduction to the special topic section on chemical physics of biological systems, we consider a wide range of contributions, all the way from the molecular level, to molecular assemblies, chemical physics of the cell, and finally systems-level approaches, based on the contributions to this special issue. Chemical physicists can look forward to an exciting future where computational tools, analytical models, and new instrumentation will push the boundaries of biological inquiry. }
 }
