--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AipScitationScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AipScitationScraperUnitURLTest3.bib
@@ -1,17 +1,21 @@
-@article{magnuski1967analysis,
-author = {Magnuski, H. S. and Sessler, G. M. and West, J. E.},
-booktitle = {The Journal of the Acoustical Society of America},
-comment = {doi: 10.1121/1.2144160},
-doi = {10.1121/1.2144160},
-issn = {00014966},
-journal = {The Journal of the Acoustical Society of America},
-month = {nov},
-number = {5},
-pages = {1199--1199},
-publisher = {Acoustical Society of America},
+@article{doi:10.1121/1.2144160,
+author = {H. S. Magnuski and G. M. Sessler and J. E. West},
 title = {On Line Analysis of Subjective Preference Data},
-url = {http://dx.doi.org/10.1121/1.2144160},
+journal = {The Journal of the Acoustical Society of America},
 volume = {42},
-year = {1967}
-,abstract = {The preference data described in the previous abstract was analyzed through use of an on‐line graphical display. The Graphic 2 console, consisting of a small computer and associated display processor, was programmed to permit the rotation of a three dimensional space and projection of labeled points in this space onto a two‐dimensional surface. The coordinate perpendicular to the display surface was represented by the size of the point. By use of a keyboard connected to the computer, the user can intensify the brightness of selected groups of points for independent study. The method permits quick evaluation of three‐dimensional data. The first application of this program was the study of results relating bandwidth and reverberation time to speech quality. Results obtained by this method will be demonstrated.}
+number = {5},
+pages = {1199-1199},
+year = {1967},
+doi = {10.1121/1.2144160},
+
+URL = { 
+        https://doi.org/10.1121/1.2144160
+    
+},
+eprint = { 
+        https://doi.org/10.1121/1.2144160
+    
+}
+,
+    abstract = { The preference data described in the previous abstract was analyzed through use of an on‐line graphical display. The Graphic 2 console, consisting of a small computer and associated display processor, was programmed to permit the rotation of a three dimensional space and projection of labeled points in this space onto a two‐dimensional surface. The coordinate perpendicular to the display surface was represented by the size of the point. By use of a keyboard connected to the computer, the user can intensify the brightness of selected groups of points for independent study. The method permits quick evaluation of three‐dimensional data. The first application of this program was the study of results relating bandwidth and reverberation time to speech quality. Results obtained by this method will be demonstrated. }
 }
