--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmsScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmsScraperUnitURLTest.bib
@@ -1,17 +1,22 @@
 @article{doi:10.1175/2008BAMS2375.1,
-author = { John A.  Knox },
+author = {
+					John A.  Knox},
 title = {Recent and Future Trends in U.S. Undergraduate Meteorology Enrollments, Degree Recipients, and Employment Opportunities},
 journal = {Bulletin of the American Meteorological Society},
 volume = {89},
 number = {6},
-pages = {873-883},
+pages = {873-884},
 year = {2008},
 doi = {10.1175/2008BAMS2375.1},
 
-URL = {http://dx.doi.org/10.1175/2008BAMS2375.1},
+URL = { 
+        https://doi.org/10.1175/2008BAMS2375.1
+    
+},
 eprint = { 
-        http://dx.doi.org/10.1175/2008BAMS2375.1
+        https://doi.org/10.1175/2008BAMS2375.1
     
 }
-
+,
+    abstract = { Using data derived from the American Meteorological Society-University Corporation for Atmospheric Research Curricula and U.S. Department of Education statistics, it is found that the number of meteorology bachelor's degree recipients in the United States has reached a level unprecedented in at least the past 40 years: from 600 to possibly 1,000 graduates per year. Furthermore, this number is increasing at a rate of approximately 8\%–11\% per year. The number of meteorology majors has also increased up to 10\% per year since the late 1990s. The number of meteorology bachelor's degree recipients is projected to increase at a rate of approximately 5\%–12\% per year through 2011. This simultaneous combination of record numbers and rapid recent increases is not mirrored in other related fields or in the American college population as a whole, suggesting a meteorology-specific cause for the increase in undergraduates. These graduation and enrollment trends are compared to data on the employment of meteorology bachelor's degree holders. The number of entry-level meteorology positions in the United States available each year appears to be no more than about half the number of new degreed meteorologists. According to data from the U.S. Bureau of Labor Statistics, growth in meteorology employment has averaged 1.2\% per year from 1994–2004 and is expected to be no more than 1.6\% per year through 2014. These numbers and trends portend an increasing oversupply of meteorology graduates versus meteorology employment opportunities if current enrollment and employment trends continue. Possible responses of the meteorology community are explored. }
 }
