--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/BioOneScraperScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/BioOneScraperScraperUnitURLTest1.bib
@@ -1,16 +1,21 @@
-@article{kennaway2008detailed,
-author = {Kennaway, Gabrielle M. and Eaton, Geoffrey L. and Feist-Burkhardt, Susanne},
-booktitle = {Palynology},
-comment = {doi: 10.2113/gspalynol.32.1.1},
-doi = {10.2113/gspalynol.32.1.1},
-issn = {01916122},
-journal = {Palynology},
-month = {dec},
-number = {1},
-pages = {1--15},
-publisher = {AASP: The Palynological Society},
+@article{doi:10.2113/gspalynol.32.1.1,
+author = { Gabrielle M.  Kennaway  and  Geoffrey L.  Eaton  and  Susanne  Feist-Burkhardt },
 title = {A Detailed Protocol for the Preparation and Orientation of Single Fossil Dinoflagellate Cysts for Transmission Electron Microscopy},
-url = {http://www.bioone.org/doi/abs/10.2113/gspalynol.32.1.1},
+journal = {Palynology},
 volume = {32},
-year = {2008}
+number = {1},
+pages = {1-15},
+year = {2008},
+doi = {10.2113/gspalynol.32.1.1},
+
+URL = { 
+        https://doi.org/10.2113/gspalynol.32.1.1
+    
+},
+eprint = { 
+        https://doi.org/10.2113/gspalynol.32.1.1
+    
+}
+,
+    abstract = { Abstract The relationship between wall layers in dinoflagellate cysts was investigated with transmission electron microscopy. A simple method is described in which small cysts (<100 μm) were identified, isolated, and encapsulated in colored agarose. The individual cysts, now visible to the naked eye, were easy to track throughout the multi-step protocol. The routine TEM protocol for biological material was modified and simplified for dinoflagellate cysts, and is described in detail. This method ensures that all samples can be retained, an important consideration when working with rare or unique specimens. Specimens of Hystrichosphaeropsis Deflandre 1935 were orientated for sectioning relative to the natural plane of settlement of the cyst. Serial sections demonstrated that the relationship between the endophragm and periphragm is complex and irregular. Interpretation of micrographs and some common misinterpretations of artifacts are illustrated and discussed. The protocol is presented in detail and illustrated so that an inexperienced person, with the assistance of an electron microscopy unit, could successfully carry out the procedure. The technique has been used with minor adaptations to prepare a range of biological materials and palynomorph specimens for transmission electron microscopy. }
 }
