--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/LiteratumScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/LiteratumScraperUnitURLTest1.bib
@@ -1,3 +1,4 @@
+
 @article{doi:10.1027/1864-9335/a000179,
 author = {Sanne Nauts and Oliver Langner and Inge Huijsmans and Roos Vonk and Daniël H. J. Wigboldus},
 title = {Forming Impressions of Personality},
@@ -16,6 +17,6 @@ eprint = {
         https://doi.org/10.1027/1864-9335/a000179
     
 }
-
-,abstract = {Asch’s seminal research on “Forming Impressions of Personality” (1946) has widely been cited as providing evidence for a primacy-of-warmth effect, suggesting that warmth-related judgments have a stronger influence on impressions of personality than competence-related judgments (e.g., Fiske, Cuddy, &amp; Glick, 2007; Wojciszke, 2005). Because this effect does not fit with Asch’s Gestalt-view on impression formation and does not readily follow from the data presented in his original paper, the goal of the present study was to critically examine and replicate the studies of Asch’s paper that are most relevant to the primacy-of-warmth effect. We found no evidence for a primacy-of-warmth effect. Instead, the role of warmth was highly context-dependent, and competence was at least as important in shaping impressions as warmth.}
+,
+    abstract = { Asch’s seminal research on “Forming Impressions of Personality” (1946) has widely been cited as providing evidence for a primacy-of-warmth effect, suggesting that warmth-related judgments have a stronger influence on impressions of personality than competence-related judgments (e.g., Fiske, Cuddy, \& Glick, 2007; Wojciszke, 2005). Because this effect does not fit with Asch’s Gestalt-view on impression formation and does not readily follow from the data presented in his original paper, the goal of the present study was to critically examine and replicate the studies of Asch’s paper that are most relevant to the primacy-of-warmth effect. We found no evidence for a primacy-of-warmth effect. Instead, the role of warmth was highly context-dependent, and competence was at least as important in shaping impressions as warmth. }
 }
