--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/UChicagoScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/UChicagoScraperUnitURLTest1.bib
@@ -8,9 +8,12 @@ pages = {223-248},
 year = {2016},
 doi = {10.1086/685557},
 
-URL = {http://dx.doi.org/10.1086/685557},
+URL = { 
+        https://doi.org/10.1086/685557
+    
+},
 eprint = { 
-        http://dx.doi.org/10.1086/685557
+        https://doi.org/10.1086/685557
     
 }
 ,
