--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/UChicagoScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/UChicagoScraperUnitURLTest2.bib
@@ -8,9 +8,12 @@ pages = {249-270},
 year = {2016},
 doi = {10.1086/685556},
 
-URL = {http://dx.doi.org/10.1086/685556},
+URL = { 
+        https://doi.org/10.1086/685556
+    
+},
 eprint = { 
-        http://dx.doi.org/10.1086/685556
+        https://doi.org/10.1086/685556
     
 }
 ,
