--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/taylorAndFrancis/TaylorAndFrancisScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/taylorAndFrancis/TaylorAndFrancisScraperUnitURLTest2.bib
@@ -5,12 +5,16 @@ journal = {Connection Science},
 volume = {23},
 number = {2},
 pages = {85-89},
-year = {2011},
+year  = {2011},
+publisher = {Taylor & Francis},
 doi = {10.1080/09540091.2011.587505},
 
-URL = {http://dx.doi.org/10.1080/09540091.2011.587505},
+URL = { 
+        https://doi.org/10.1080/09540091.2011.587505
+    
+},
 eprint = { 
-        http://dx.doi.org/10.1080/09540091.2011.587505
+        https://doi.org/10.1080/09540091.2011.587505
     
 }
 
