--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/taylorAndFrancis/TaylorAndFrancisScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/taylorAndFrancis/TaylorAndFrancisScraperUnitURLTest3.bib
@@ -5,13 +5,17 @@ journal = {Natural Product Research},
 volume = {26},
 number = {2},
 pages = {152-160},
-year = {2012},
+year  = {2012},
+publisher = {Taylor & Francis},
 doi = {10.1080/14786419.2010.534733},
     note ={PMID: 21809949},
 
-URL = {http://dx.doi.org/10.1080/14786419.2010.534733},
+URL = { 
+        https://doi.org/10.1080/14786419.2010.534733
+    
+},
 eprint = { 
-        http://dx.doi.org/10.1080/14786419.2010.534733
+        https://doi.org/10.1080/14786419.2010.534733
     
 }
 ,
