--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/taylorAndFrancis/TaylorAndFrancisScraperUnitURLTest5.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/taylorAndFrancis/TaylorAndFrancisScraperUnitURLTest5.bib
@@ -5,12 +5,16 @@ journal = {Journal of Management Information Systems},
 volume = {27},
 number = {2},
 pages = {159-188},
-year = {2010},
+year  = {2010},
+publisher = {Routledge},
 doi = {10.2753/MIS0742-1222270205},
 
-URL = {http://www.tandfonline.com/doi/abs/10.2753/MIS0742-1222270205},
+URL = { 
+        https://www.tandfonline.com/doi/abs/10.2753/MIS0742-1222270205
+    
+},
 eprint = { 
-        http://www.tandfonline.com/doi/pdf/10.2753/MIS0742-1222270205
+        https://www.tandfonline.com/doi/pdf/10.2753/MIS0742-1222270205
     
 }
 ,
