first step in migrating to Apache Commons HttpClient 4.x

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreBookScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreBookScraperUnitURLTest.bib
@@ -1,9 +1,9 @@
-@electronic{kolen2001field,
+@book{kolen2001field,
 address = {New York},
 author = {Kolen, John F. and Kremer, Stefan C.},
-isbn = {9780470544037 0470544031},
+isbn = {9780470544037 0470544031 0780353692 9780780353695},
 publisher = {IEEE Press},
-refid = {1027347006},
+refid = {696297984},
 title = {A field guide to dynamical recurrent networks},
 url = {http://ieeexplore.ieee.org/xpl/bkabstractplus.jsp?bkn=5263132},
 year = {2001}
