fixed Wiley Scraper

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/WileyIntersienceScraperUnitURLTest4.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/WileyIntersienceScraperUnitURLTest4.bib
@@ -1,15 +1,13 @@
-﻿@article {ADMA:ADMA1655,
-author = {McGehee, M. D. and Heeger, A. J.},
-title = {Semiconducting (Conjugated) Polymers as Materials for Solid-State Lasers},
+@article{doi:10.1002/1521-4095(200011)12:22<1655::AID-ADMA1655>3.0.CO;2-2,
+author = {M. D. McGehee and A. J. Heeger},
+title = {Semiconducting (Conjugated) Polymers as Materials for Solid‐State Lasers},
 journal = {Advanced Materials},
 volume = {12},
 number = {22},
-publisher = {WILEY-VCH Verlag GmbH},
-issn = {1521-4095},
-url = {http://dx.doi.org/10.1002/1521-4095(200011)12:22<1655::AID-ADMA1655>3.0.CO;2-2},
+pages = {1655-1668},
+keywords = {Conjugated polymers, Lasers, solid‐state, Semiconducting polymers},
 doi = {10.1002/1521-4095(200011)12:22<1655::AID-ADMA1655>3.0.CO;2-2},
-pages = {1655--1668},
-keywords = {Conjugated polymers, Lasers, solid-state, Semiconducting polymers},
-year = {2000},
-abstract = {Light-emissive polymers are outstanding laser materials because they are intrinsically “4-level” systems, they have luminescence efficiencies higher than 60 % even in undiluted films, they emit at colors that span the visible spectrum, and they can be processed into optical quality films by spin casting. The important materials issues are reviewed and the prospects for making polymer diode lasers are discussed.},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/1521-4095%28200011%2912%3A22%3C1655%3A%3AAID-ADMA1655%3E3.0.CO%3B2-2},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/1521-4095%28200011%2912%3A22%3C1655%3A%3AAID-ADMA1655%3E3.0.CO%3B2-2},
+abstract = {Abstract Light‐emissive polymers are outstanding laser materials because they are intrinsically “4‐level” systems, they have luminescence efficiencies higher than 60 \% even in undiluted films, they emit at colors that span the visible spectrum, and they can be processed into optical quality films by spin casting. The important materials issues are reviewed and the prospects for making polymer diode lasers are discussed.}
 }
