--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/WileyIntersienceScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/WileyIntersienceScraperUnitURLTest3.bib
@@ -1,13 +1,11 @@
-﻿@article {ISJ:ISJ275,
-author = {Avison, David and Fitzgerald, Guy and Powell, Philip},
+@article{doi:10.1111/j.1365-2575.2007.00275.x,
+author = {David Avison and Guy Fitzgerald and Philip Powell},
 title = {Editorial},
 journal = {Information Systems Journal},
 volume = {17},
 number = {4},
-publisher = {Blackwell Publishing Ltd},
-issn = {1365-2575},
-url = {http://dx.doi.org/10.1111/j.1365-2575.2007.00275.x},
+pages = {317-319},
 doi = {10.1111/j.1365-2575.2007.00275.x},
-pages = {317--319},
-year = {2007},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2575.2007.00275.x},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2575.2007.00275.x}
 }
