added new entry type >collection<
- added according messages
- added collection to BibTexUtils
- added collection to BibTexParser
- adjusted thumbnail image for collection

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1701,6 +1701,8 @@ post.resource.entrytype                                 = entry type
 post.resource.entrytype.article.description             = An article from a scientific journal
 post.resource.entrytype.book.description                = A book where a publisher is given
 post.resource.entrytype.booklet.description             = A printed and bound work where no publisher or financing institution is given
+post.resource.entrytype.collection                      = 
+post.resource.entrytype.collection.description          = A book without a specific author, containing different articles of different authors, where a publisher is given
 post.resource.entrytype.conference                      = conference*
 post.resource.entrytype.conference.description          = A contribution to a conference that did not appear in the proceedings
 post.resource.entrytype.description                     = The entry type of the publication.
