--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1687,6 +1687,8 @@ post.resource.entrytype                                 = Eintragstyp
 post.resource.entrytype.article.description             = Ein Artikel aus einem wissenschaftlichen Journal
 post.resource.entrytype.book.description                = Ein Buch das einen Herausgeber hat
 post.resource.entrytype.booklet.description             = Ein gedrucktes und gebundenes Werk bei dem kein Herausgeber oder eine finanzierede Institution vorgegeben ist
+post.resource.entrytype.collection                      = 
+post.resource.entrytype.collection.description          = Ein Buch ohne allgemeinen Autor, mit mehreren Beitr\u00E4gen verschiedener Autoren, das einen Herausgeber hat
 post.resource.entrytype.conference                      = Konferenz*
 post.resource.entrytype.conference.description          = Ein Konferenzbeitrag der nicht im Tagungsband ver\u00F6ffentlich wurde
 post.resource.entrytype.description                     = Eintragstyp der Ver\u00F6ffentlichung.
