--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1506,6 +1506,8 @@ post.resource.entrytype                                 = \u0442\u0438\u043F \u0
 post.resource.entrytype.article.description             = \u0421\u0442\u0430\u0442\u044C\u044F \u0438\u0437 \u043D\u0430\u0443\u0447\u043D\u043E\u0433\u043E \u0436\u0443\u0440\u043D\u0430\u043B\u0430
 post.resource.entrytype.book.description                = \u041A\u043D\u0438\u0433\u0430, \u0443 \u043A\u043E\u0442\u043E\u0440\u043E\u0439 \u0435\u0441\u0442\u044C \u0438\u0437\u0434\u0430\u0442\u0435\u043B\u044C
 post.resource.entrytype.booklet.description             = \u041D\u0430\u043F\u0435\u0447\u0430\u0442\u0430\u043D\u043D\u0430\u044F, \u0438\u043B\u0438 \u0441\u0431\u043E\u0440\u043D\u0430\u044F \u0440\u0430\u0431\u043E\u0442\u0430, \u0443 \u043A\u043E\u0442\u043E\u0440\u043E\u0439 \u043D\u0435 \u0443\u043A\u0430\u0437\u0430\u043D \u0438\u0437\u0434\u0430\u0442\u0435\u043B\u044C, \u0438\u043B\u0438 \u0444\u0438\u043D\u0430\u043D\u0441\u0438\u0440\u0443\u044E\u0449\u0435\u0435 \u0443\u0447\u0440\u0435\u0436\u0434\u0435\u043D\u0438\u0435
+post.resource.entrytype.collection                      = 
+post.resource.entrytype.collection.description          = 
 post.resource.entrytype.conference                      = \u043A\u043E\u043D\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u044F*
 post.resource.entrytype.conference.description          = \u0420\u0430\u0431\u043E\u0442\u0430 \u043D\u0430 \u043A\u043E\u043D\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u0438, \u043A\u043E\u0442\u043E\u0440\u0430\u044F \u043D\u0435 \u0432\u043A\u043B\u044E\u0447\u0435\u043D\u0430 \u0432 \u0441\u0431\u043E\u0440\u043D\u0438\u043A
 post.resource.entrytype.description                     = 
