--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -569,6 +569,7 @@ error.captcha                                = Die \u00DCberpr\u00FCfung des Cap
 error.concept_page_without_conceptname       = Diese Seite existiert leider nicht auf unserem Server. Um auf eine Konzept-Seite zuzugreifen, verwenden Sie bitte das URL-Schema /concept/tag/CONCEPT oder /concept/user/USERNAME/CONCEPTNAME
 error.cookies_required                       = Bitte aktivieren Sie Cookies in Ihrem Webbrowser.
 error.cv.missing_user_group                  = Benutzer-/Gruppenangabe fehlt.
+error.disambiguation.without_index           = 
 error.document_invalid_symbols               = Der Dateiname darf keines der folgenden Zeichen enthalten &lt;,/,\\ oder &gt;
 error.document_not_converted                 = Der QR-Code konnte nicht in das angefordete Dokument eingebettet werden.
 error.document_not_found                     = Das angefragte Dokument konnte leider nicht gefunden werden.
@@ -1056,6 +1057,7 @@ login.lostPassword            = Passwort vergessen
 login.lostPassword_1          = Ich habe mein Passwort vergessen.
 login.lostPassword_2          = Bitte senden Sie mir ein neues Passwort.
 login.method                  = Anmeldemethode
+login.method.httpbasic        = 
 login.method.internal         = Lokal
 login.method.ldap             = LDAP
 login.method.openid           = OpenID
@@ -1340,7 +1342,7 @@ person.index.info                                 = infotext
 person.index.placeholder                          = Hier Personennamen (Doktorand_in, Betreuer_in, etc.) oder Titelstichwort eingeben
 person.index.searchInfo                           = Suchen Sie nach einer Thesis durch eine Kombination aus Autor (Vor- / Nachname), Titel der Arbeit, Universit\u00E4t und Erscheinungsjahr
 person.merge.conflictmerge                        = accept merge and resolve conflicts
-person.merge.deny                                 = deny merge
+person.merge.deny\                                 = deny merge\n
 person.merge.merge                                = accept merge
 person.merge.reasons                              = Reasons for this match
 person.new.formFirstName                          = Vorname
@@ -1422,6 +1424,7 @@ person.show.newThesisButton                       = Neue Abschlussarbeit
 person.show.noNamesFound                          = Keine Namen gefunden
 person.show.noResourcesFound                      = Keine Resourcen gefunden
 person.show.orcidId                               = OrcidID
+person.show.other                                 = Sonstige
 person.show.otherPub                              = Andere Publikationen
 person.show.otherPubOfSimilarAuthor               = Andere Publikationen gleichnamiger Autoren
 person.show.otherReviewer                         = Andere Gutachter
@@ -1434,11 +1437,13 @@ person.show.resourcesPanelHeader                  = Resourcen
 person.show.role                                  = Rolle
 person.show.rolePubTab                            = Betreuung / Begutachtung
 person.show.saveButton                            = speichern
+person.show.similarPersonMatchList                = Other persons that might be the same\n
 person.show.supervisor                            = Doktorvater
 person.show.thatsMeButton                         = Das bin ich
 person.show.thatsMeLabel                          = Benutzer
 person.show.thatsNotMeButton                      = Das bin ich nicht
 person.show.thesis                                = Abschlussarbeiten
+person.sidebar                                    = 
 person.sidebar.linkedUserClaimText                = Falls Sie diese Person sind, so k\u00F6nnen Sie diese Seite f\u00FCr sich beanspruchen und so mit Ihrem Account verbinden. Bitte beachten Sie, dass Sie nur eine Person beanspruchen k\u00F6nnen.
 person.sidebar.linkedUserClaimedText              = Diese Person wurde bereits einem User zugeordnet. 
 person.sidebar.linkedUserDefaultInfoText          = Das sind Sie? Melden Sie sich an, um diese Person Ihrem Account zuzuordnen.
@@ -2555,6 +2560,7 @@ time.a_month   = einem Monat
 time.a_year    = einem Jahr
 time.an_hour   = einer Stunde
 time.justnow   = gerade eben
+time.postfix   = 
 time.prefix    = vor 
 time.x_days    = {0} Tagen
 time.x_hours   = {0} Stunden
