fixed some merge issues
- removed line breaks from messages
- removed merge artifact

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1355,7 +1355,7 @@ person.index.info                                 = infotext
 person.index.placeholder                          = Enter Person Name (Author, Advisor etc.) or Title 
 person.index.searchInfo                           = search for a thesis by a combination of author (first- / surname), title of thesis, university and year of publication
 person.merge.conflictmerge                        = accept merge and resolve conflicts
-person.merge.deny\                                 = deny merge\n
+person.merge.deny                                 = deny merge
 person.merge.merge                                = accept merge
 person.merge.reasons                              = Reasons for this match
 person.new.formFirstName                          = First name
@@ -1450,7 +1450,7 @@ person.show.resourcesPanelHeader                  = Resources
 person.show.role                                  = Role
 person.show.rolePubTab                            = Related Theses
 person.show.saveButton                            = save
-person.show.similarPersonMatchList                = Other persons that might be the same\n
+person.show.similarPersonMatchList                = Other persons that might be the same
 person.show.supervisor                            = Supervisor
 person.show.thatsMeButton                         = That's me
 person.show.thatsMeLabel                          = User
