--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1342,7 +1342,7 @@ person.index.info                                 = infotext
 person.index.placeholder                          = Hier Personennamen (Doktorand_in, Betreuer_in, etc.) oder Titelstichwort eingeben
 person.index.searchInfo                           = Suchen Sie nach einer Thesis durch eine Kombination aus Autor (Vor- / Nachname), Titel der Arbeit, Universit\u00E4t und Erscheinungsjahr
 person.merge.conflictmerge                        = accept merge and resolve conflicts
-person.merge.deny\                                 = deny merge\n
+person.merge.deny                                 = deny merge
 person.merge.merge                                = accept merge
 person.merge.reasons                              = Reasons for this match
 person.new.formFirstName                          = Vorname
@@ -1437,7 +1437,7 @@ person.show.resourcesPanelHeader                  = Resourcen
 person.show.role                                  = Rolle
 person.show.rolePubTab                            = Betreuung / Begutachtung
 person.show.saveButton                            = speichern
-person.show.similarPersonMatchList                = Other persons that might be the same\n
+person.show.similarPersonMatchList                = Other persons that might be the same
 person.show.supervisor                            = Doktorvater
 person.show.thatsMeButton                         = Das bin ich
 person.show.thatsMeLabel                          = Benutzer
