Added the possibility for admins to restore a deleted group
- modified admin group view, command and controller
- added restoreGroup method to logic and interfaces
- added getDeletedGroupUsers method to logix and interfaces
- added comments
- fixed SyncTest username
- added new message properties
- added js to admin/group page
- extended fields in admin servlet for /admin/group

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2244,6 +2244,11 @@ settings.group.permissionHeading                            = edit group level p
 settings.group.permissionIntro                              = Select a group, fetch its current permissions and add or remove permissions.
 settings.group.picture.header                               = a picture for the group CV
 settings.group.profileInfo                                  = The information you enter here will be displayed on the <a href="{0}">group CV page</a>.
+settings.group.reactivate                                   = restore group
+settings.group.reactivate.description                       = Enter the name of the group that you want to restore. In addition please enter a username of a user, that will become administrator of the restored group.
+settings.group.reactivate.failure                           = Error during group restoration.
+settings.group.reactivate.help                              = Enter the name of a user that will become administrator of the group.
+settings.group.reactivate.success                           = Group has been successfully restored.
 settings.group.realname                                     = real group name
 settings.group.remInvite.button                             = dismiss
 settings.group.remInvite.button.title                       = dismiss the group invite
