--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -2006,6 +2006,11 @@ settings.group.permission.help                              = \u041D\u0430\u0436
 settings.group.permissionHeading                            = \u0440\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043F\u0440\u0430\u0432\u0430 \u0433\u0440\u0443\u043F\u043F\u044B
 settings.group.permissionIntro                              = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0433\u0440\u0443\u043F\u043F\u0443, \u0437\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u0435 \u0435\u0435 \u043F\u0440\u0430\u0432\u0430 \u0438 \u0434\u043E\u0431\u0430\u0432\u043B\u044F\u0439\u0442\u0435, \u0438\u043B\u0438 \u0443\u0434\u0430\u043B\u044F\u0439\u0442\u0435 \u0438\u0445.
 settings.group.profileInfo                                  = \u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F, \u043A\u043E\u0442\u043E\u0440\u0443\u044E \u0412\u044B \u0437\u0434\u0435\u0441\u044C \u0432\u0432\u0435\u0434\u0435\u0442\u0435, \u0431\u0443\u0434\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u0430 \u043D\u0430 <a href="{0}">\u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0435 \u0440\u0435\u0437\u044E\u043C\u0435 \u0433\u0440\u0443\u043F\u043F\u044B</a>.
+settings.group.reactivate                                   = 
+settings.group.reactivate.description                       = 
+settings.group.reactivate.failure                           = 
+settings.group.reactivate.help                              = 
+settings.group.reactivate.success                           = 
 settings.group.realname                                     = \u043F\u043E\u043B\u043D\u043E\u0435 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0433\u0440\u0443\u043F\u043F\u044B
 settings.group.remInvite.button                             = \u0438\u0433\u043D\u043E\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 settings.group.remInvite.button.title                       = \u0438\u0433\u043D\u043E\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043F\u0440\u0438\u0433\u043B\u0430\u0448\u0435\u043D\u0438\u0435 \u0432 \u0433\u0440\u0443\u043F\u043F\u0443
