--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -854,6 +854,7 @@ gettingStarted.cite                  = {0} helps you create bibligraphies for sc
 gettingStarted.collaborate           = <p>Use the search to find other users. On a user's page, you can add them as friends. In the <a href="/friendsoverview">friends overview</a> you can see which posts you are sharing with you friends and which posts your friends are sharing with you.</p>\n\n<p>Groups offer easier means for collaboration. When adding new posts, set if the post should be private, visible for all, or only visible for certain groups.</p> \n\n<p>Because of copyright documents are only visible private. Within a group, they can be made \u200B\u200Bvisible to other group members.</p>
 gettingStarted.collect               = <p>Using {0} you can easily create collections of bookmark and publication posts. Just insert <a href="/postBookmark">bookmarks</a> and <a href="/postPublication">publications</a>. You can do this even faster with our {0} <a href="/buttons">browser add-ons or bookmarklets</a>.</p><p>In addition, you can also use <a href="/postPublication">ISBN, ISSN, DOI</a>, or <a href="/postPublication#scan">barcodes</a> to have the insert publication form filled up automatically for you.</p><p>Use tags to organize the posts in your collection. If you choose them carefully, tags are a very powerful instrument. <a href="/help_en/Tags">Learn more about tagging</a> in {0}.</p>
 gettingStarted.discover              = <p>Discover new interesting publications for your scientific activities. The fulltext search of {0} helps you doing so. Beyond that, you can use the search field to filter your post lists by tags, authors and users.</p>\n\n<p>Be inspired by the tag clouds. Click on interesting tags, to filter the post lists for special topics. This way, you can browse through topics easily and find related contents by concept.</p>
+gettingStarted.export                = <p>{0}\u2019s functions can easily be integrated into other websites or even your own software using one of our API (application programming interface) clients or code snippets.</p>\n<p>You can also download {0} plugins, for example for [TYPO3](Typo3 \u201Ewikilink\u201C) and [WordPress](wordpress \u201Ewikilink\u201C) in order to create advanced bibliographies or simple lists of publications and tag clouds from your {0} account and integrate them in your blog posts and pages. You can look up our help wiki to find a [complete list of ways to integrate {0}] (Integration \u201Ewikilink\u201C) with various systems and technologies.</p>
 gettingStarted.headline              = Getting started with {0}
 gettingStarted.intro                 = {0} helps you to organize your scientific work. Use {0} to collect publications and bookmarks, to collaborate with your colleagues, and to discover interesting researches for your daily work.
 gettingStarted.navi.cite             = Manage
@@ -864,6 +865,8 @@ gettingStarted.navi.collect          = Collect
 gettingStarted.navi.collect.desc     = Ready your browser for {0}.
 gettingStarted.navi.discover         = Discover
 gettingStarted.navi.discover.desc    = Find interesting content.
+gettingStarted.navi.export           = Export\n
+gettingStarted.navi.export.desc      = Integrate {0} into other websites\n
 gettingStarted.navi.overview         = overview
 
 goldStandard = community post
