--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -865,8 +865,8 @@ gettingStarted.navi.collect          = Collect
 gettingStarted.navi.collect.desc     = Ready your browser for {0}.
 gettingStarted.navi.discover         = Discover
 gettingStarted.navi.discover.desc    = Find interesting content.
-gettingStarted.navi.export           = Export\n
-gettingStarted.navi.export.desc      = Integrate {0} into other websites\n
+gettingStarted.navi.export           = Export
+gettingStarted.navi.export.desc      = Integrate {0} into other websites
 gettingStarted.navi.overview         = overview
 
 goldStandard = community post
