--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -862,7 +862,7 @@ gettingStarted.navi.collect          = Sammeln
 gettingStarted.navi.collect.desc     = Machen Sie Ihren Browser fit f\u00FCr {0}.
 gettingStarted.navi.discover         = Entdecken
 gettingStarted.navi.discover.desc    = Finden Sie interessante Inhalte.
-gettingStarted.navi.export           = Export\n
+gettingStarted.navi.export           = Export
 gettingStarted.navi.export.desc      = Integrieren Sie {0} in andere Webseiten
 gettingStarted.navi.overview         = \u00DCberblick
 
