added apiemail key to messages

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2125,7 +2125,7 @@ settings.advanced                                           = advanced
 settings.all                                                = all
 settings.alphabet                                           = alphabet
 settings.apidoc                                             = API Documentation
-settings.apisupport                                         = We could not obtain your API key. Please reload the page. If the problem is still occuring, please contact the API support: <a href="mailto:api-support@bibsonomy.org">api-support@bibsonomy.org</a>
+settings.apisupport                                         = We could not obtain your API key. Please reload the page. If the problem is still occuring, please contact the API support: <a href="mailto:{0}">{0}</a>
 settings.bookmark                                           = show bookmarks
 settings.browser.fileselect                                 = select your file
 settings.browser.fileselect.help                            = a file containing your bookmarks exported from firefox
