--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2110,7 +2110,7 @@ settings.advanced                                           = Erweitert
 settings.all                                                = Alle
 settings.alphabet                                           = Alphabet
 settings.apidoc                                             = API-Dokumentation
-settings.apisupport                                         = Wir konnten Ihren API-Key nicht abrufen. Bitte laden Sie die Seite neu. Wenn das Problem weiterhin besteht, kontaktieren Sie bitte den API-Support: <a href="mailto:api-support@bibsonomy.org">api-support@bibsonomy.org</a>
+settings.apisupport                                         = Wir konnten Ihren API-Key nicht abrufen. Bitte laden Sie die Seite neu. Wenn das Problem weiterhin besteht, kontaktieren Sie bitte den API-Support: <a href="mailto:{0}">{0}</a>
 settings.bookmark                                           = Zeige Lesezeichen
 settings.browser.fileselect                                 = Dateiauswahl
 settings.browser.fileselect.help                            = Eine Datei, die Ihre aus Firefox exportierten Lesezeichen enth\u00E4lt
