Added german messages

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1341,10 +1341,10 @@ person.index.header                               = Personensuche
 person.index.info                                 = infotext
 person.index.placeholder                          = Hier Personennamen (Doktorand_in, Betreuer_in, etc.) oder Titelstichwort eingeben
 person.index.searchInfo                           = Suchen Sie nach einer Thesis durch eine Kombination aus Autor (Vor- / Nachname), Titel der Arbeit, Universit\u00E4t und Erscheinungsjahr
-person.merge.conflictmerge                        = 
-person.merge.deny                                 = 
-person.merge.merge                                = 
-person.merge.reasons                              = 
+person.merge.conflictmerge                        = Akzeptiere Merge und l\u00F6se Konflikte
+person.merge.deny                                 = Merge ablehnen
+person.merge.merge                                = Akzeptiere Merge
+person.merge.reasons                              = Merge Gr\u00FCnde
 person.new.formFirstName                          = Vorname
 person.new.formInfo                               = Bei Unsicherheit \u00FCber den Namen, alles in das Nachname-Feld eintragen
 person.new.formLastName                           = Nachname
@@ -1437,7 +1437,7 @@ person.show.resourcesPanelHeader                  = Resourcen
 person.show.role                                  = Rolle
 person.show.rolePubTab                            = Betreuung / Begutachtung
 person.show.saveButton                            = speichern
-person.show.similarPersonMatchList                = 
+person.show.similarPersonMatchList                = M\u00F6gliche identische Personen
 person.show.supervisor                            = Doktorvater
 person.show.thatsMeButton                         = Das bin ich
 person.show.thatsMeLabel                          = Benutzer
